--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
   <string name="add_a_tip">Add a Tip</string>
   <string name="add_friends_activity_label">Foursquare Add Friends</string>
-  <string name="add_venue_activity_label_add_venue">Add a New Venue</string>
-  <string name="add_venue_activity_label_edit_venue">Submit Venue Edits</string>
+  <string name="add_venue_activity_label_add_venue">Foursquare Add a New Venue</string>
+  <string name="add_venue_activity_label_edit_venue">Foursquare Submit Venue Edits</string>
   <string name="add_venue_error_toast_venue_null">Unable to add venue!</string>
   <string name="add_venue_progress_bar_title_add_venue">Add Venue</string>
   <string name="add_venue_progress_bar_title_edit_venue">Submit Venue Edits</string>
@@ -229,9 +229,9 @@
   <string name="edit_venue_options_label">Foursquare Edit Venue</string>
   <string name="edit_venue_options_progress_title">Flag Venue</string>
   <string name="edit_venue_options_progress_message">Submitting venue flag info...</string>
-  <string name="edit_venue_options_btn_edit_venue">Edit Venue Info</string>
-  <string name="edit_venue_options_btn_flag_as_mislocated">Flag As Mislocated</string>
-  <string name="edit_venue_options_btn_flag_as_duplicate">Flag As Duplicate</string>
-  <string name="edit_venue_options_btn_flag_as_closed">Flag As Closed</string>
+  <string name="edit_venue_options_btn_edit_venue">Edit venue info</string>
+  <string name="edit_venue_options_btn_flag_as_mislocated">Flag incorrect address</string>
+  <string name="edit_venue_options_btn_flag_as_duplicate">Flag venue as duplicate</string>
+  <string name="edit_venue_options_btn_flag_as_closed">Flag venue as closed</string>
   <string name="edit_venue">Edit Venue</string>
 </resources>  
