--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -51,6 +51,9 @@
   <string name="friendsactivity_title_sort_distance">Friends Nearby</string>
   <string name="friendsactivity_menu_sort_time">Sort Time</string>
   <string name="friendsactivity_menu_sort_distance">Sort Distance</string>
+  <string name="friendsactivity_menu_leaderboard">Leaderboard</string>
+  <string name="friendsactivity_menu_add_friends">Add Friends</string>
+  <string name="friendsactivity_menu_friend_requests">Friend Requests</string>
   <string name="last_seen_header">Last Seen</string>
   <string name="loading">Loading...</string>
   <string name="login_dialog_message">Please wait while logging into Foursquare...</string>
