--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -36,7 +36,7 @@
   <string name="city">City</string>
   <string name="cross_street">Cross Street</string>
   <string name="feedback_error">Couldn\'t find configured email client.</string>
-  <string name="feedback_label">Send Feedback</string>
+  <string name="feedback_label">Send Force-Close Report</string>
   <string name="feedback_more">If you are reporting a problem please answer the questions below:</string>
   <string name="feedback_question_additional_information">Please provide any additional information below.</string>
   <string name="feedback_question_expected_output">What is the expected output? What do you see instead?</string>
@@ -126,7 +126,7 @@
   <string name="search_already_in_progress_toast">A search is already in progress.</string>
   <string name="search_label">Search</string>
   <string name="search_venues_label">Venues</string>
-  <string name="send_feedback_preference_summary">Send feedback with system logs by email.</string>
+  <string name="send_feedback_preference_summary">Send a force-close report by email.</string>
   <string name="shout_action_label">Shout!</string>
   <string name="shout_activity_label">Foursquare Checkin</string>
   <string name="shout_hint">Shout, shout, let it all out...                              </string> <!-- The whitespace is a layout hack to make sure the dialog box doesn't bounce in size so quickly.  -->
@@ -268,11 +268,13 @@
   <string name="send_log_message_device_build">"Build number: "</string>
   <string name="send_log_main_dialog_text">After we\'ve completed collecting the logs, please choose an email client to send.</string>  
   <string name="send_log_acquiring_log_progress_dialog_message">Collecting logs from system...</string>
-  <string name="send_log_chooser_title">Foursquare for Android Feedback</string>
+  <string name="send_log_chooser_title">Foursquare Force-Close Report</string>
   <string name="send_log_failed_to_get_log_message">Failed to get the log from the system.</string>
   <string name="ok">OK</string>
   <string name="cancel">Cancel</string>
   <string name="preferences_native_full_size_image_viewer_title">Image Viewing</string>
   <string name="preferences_native_full_size_image_viewer_summary_on">Use your phone\'s built-in image viewer for viewing friend photos.</string>
-  <string name="preferences_native_full_size_image_viewer_summary_off">Use app image viewer for viewing friend photos.</string>     
+  <string name="preferences_native_full_size_image_viewer_summary_off">Use app image viewer for viewing friend photos.</string> 
+  <string name="help_label">Help</string>
+  <string name="help_preference_summary">Get help using Foursquare!</string>
 </resources>
